--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 h1  {
-    font-family: Arial, Helvetica, sans-serif;
-    color: brown;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    
+}
+body{
+    background-color: rgb(226, 168, 43);
 }
